<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.cityblack.game</groupId>
        <artifactId>dependencies</artifactId>
        <version>${revision}</version>
        <relativePath>../dependencies/pom.xml</relativePath>
    </parent>

    <artifactId>parent</artifactId>
    <name>parent</name>
    <description>parent</description>
    <packaging>pom</packaging>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>utf-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.visitor=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <basedir/>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>

    </build>
</project>
